src/main/java/com/example/payroll/errors/ProductBigQuantityException.java
package com.example.payroll.errors;

public class ProductBigQuantityException extends RuntimeException{
    public ProductBigQuantityException(Integer quantity) {
        super("incorrect quantity " + quantity);
    }
}
